--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,13 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-:root {
+/* :root {
   --white: #f7f5ee;
   --green: #5cb55d;
   --litegreen: #8cd08c;
@@ -15,28 +15,29 @@ body {
   --purple: #f3d8ec;
   --yellow: #f6ef73;
   --off-black: #181818;
-}
+} */
 
 a:link {
   text-decoration: none;
-  color: black;
+  /* color: black; */
 }
 a:visited {
   text-decoration: none;
-  color: black;
+  /* color: black; */
 }
 a:hover {
   text-decoration: none;
-  color: black;
+  /* color: black; */
 }
 a:active {
   text-decoration: none;
-  color: black;
+  /* color: black; */
 }
 
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./Images/footprint.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("./Images/footprint.jpg");
 
   /* Set a specific height */
   /* height: 50%; */
@@ -48,3 +49,26 @@ a:active {
   position: relative;
 }
 
+.logo {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  max-width: 150px;
+  /* width: 500px; */
+  /* margin-left: 12%; */
+}
+
+.navlinks {
+  color: rgba(9,138,90,0.79);
+}
+
+
+/* .MuiAvatar-root {
+  color: rgba(9,138,90,0.79);
+} */
+
+@font-face {
+  font-family: 'Raleway';
+  src: local('Rakeway'), url(./Fonts/Raleway-ExtraBold.ttf) format('truetype');
+}
