--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,7 +26,6 @@ a:active {
 
 .hero-image {
   background: url("./Images/footprint.jpg") no-repeat center center fixed;
-  /* filter: brightness(80%); */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -36,7 +35,6 @@ a:active {
 @media only screen and (max-width: 600px){
   .hero-image {
     background: url("./Images/mobilesizefootprint.jpg") no-repeat center center fixed;
-    /* filter: brightness(80%); */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -59,4 +57,52 @@ a:active {
 @font-face {
   font-family: "Raleway";
   src: local("Raleway"), url(./Fonts/Raleway-ExtraBold.ttf) format("truetype");
+}
+
+.arrows {
+  width: 60px;
+  height: 72px;
+  position: absolute;
+  left: 50%;
+  margin-left: -30px;
+  bottom: 20px;
+}
+
+.arrows path {
+  stroke: #098a5a;
+  fill: transparent;
+  stroke-width: 6px;  
+  animation: arrow 2s infinite;
+  -webkit-animation: arrow 2s infinite; 
+}
+
+@keyframes arrow
+{
+0% {opacity:0}
+40% {opacity:1}
+80% {opacity:0}
+100% {opacity:0}
+}
+
+@-webkit-keyframes arrow /*Safari and Chrome*/
+{
+0% {opacity:0}
+40% {opacity:1}
+80% {opacity:0}
+100% {opacity:0}
+}
+
+.arrows path.a1 {
+  animation-delay:-1s;
+  -webkit-animation-delay:-1s; /* Safari 和 Chrome */
+}
+
+.arrows path.a2 {
+  animation-delay:-0.5s;
+  -webkit-animation-delay:-0.5s; /* Safari 和 Chrome */
+}
+
+.arrows path.a3 { 
+  animation-delay:0s;
+  -webkit-animation-delay:0s; /* Safari 和 Chrome */
 }
