--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,7 +38,7 @@ a:active {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: 130vw;
   }
 }
 
