--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,10 +36,10 @@ a:active {
   .hero-image {
     background: url("./assets/Images/mobilesizefootprint.jpg") no-repeat center
       center fixed;
-    -webkit-background-size: 130vw;
-    -moz-background-size: 130vw;
-    -o-background-size: 130vw;
-    background-size: 130vw;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
 }
 
