--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,12 +34,12 @@ a:active {
 
 @media only screen and (max-width: 600px) {
   .hero-image {
-    background: url("./assets/Images/mobilesizefootprint.jpg") no-repeat center
+    background: url("./assets/footprint.svg") no-repeat center
       center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: 80vw;
   }
 }
 
