--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,8 +34,7 @@ a:active {
 
 @media only screen and (max-width: 450px) {
   .hero-image {
-    background: url("./assets/footprint.svg") no-repeat center
-      center fixed;
+    background: url("./assets/footprint.svg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
